UPDATE: Overfloe hidden added to index.css to prevent overflow issues in HeroSection component.

--- a/src/index.css
+++ b/src/index.css
@@ -77,10 +77,13 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  overflow: hidden;
   /*text-align: center;*/
 }
 
-body, html, #root {
+body,
+html,
+#root {
   min-height: 100%;
   margin: 0;
   padding: 0;
